@@ -234,7 +234,19 @@ class CoursePress_Data_Unit {
 			$force_current_unit_successful_completion = cp_is_true(
 				get_post_meta( $previous_unit_id, 'force_current_unit_successful_completion', true )
 			);
-		}
+        }
+
+        /**
+         * If there is NO MANDATORY modules, then this parameter can not be
+         * true!
+         */
+        if ( $force_current_unit_completion ) {
+            $number_of_mandatory = self::get_number_of_mandatory( $previous_unit_id );
+            if ( 0 == $number_of_mandatory ) {
+                $force_current_unit_completion = false;
+                $force_current_unit_successful_completion = false;
+            }
+        }
 
 		if ( $previous_unit_id && $is_available ) {
 			$student_progress = CoursePress_Data_Student::get_completion_data( $student_id, $course_id );
