@@ -8,6 +8,7 @@ CHANGELOG
 = 2.0.4 =
 -------------------------------------------------
 * Fixed a bug when user can enroll in the course without paying to paid course.
+* Fixed a bug with combination when we do not have required modules, but we check "User needs to answer all required[...]".
 
 = 2.0.3 =
 -------------------------------------------------
